style: spacing adjustment fix: profile's favorite type updating logic

--- a/src/comp/module/filter/Filter.scss
+++ b/src/comp/module/filter/Filter.scss
@@ -1,7 +1,7 @@
 .tagFilter--column {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-  grid-column-gap: 5px;
+  grid-column-gap: 2rem;
 }
 .priceFilter {
   display: grid;
